--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,3 @@
-baseurl = "https://nepal.allyouneedtoknow.tips/"
 theme = "hugo-sustain"
 defaultContentLanguage = "en"
 languageCode = "en-US"
@@ -11,12 +10,16 @@ googleAnalytics = ""
 [languages.en]
   weight = 0
   languageName = "English"
+  contentDir = "content/english"
+  baseURL = "https://nepal.allyouneedtoknow.tips/"
 
 [languages.it]
   weight = 10
   languageName = "Italian"
+  contentDir = "content/italian"
+  baseURL = "https://nepal.allyouneedtoknow.tips/it/"
 
-[permalinks]
+[permalinks] 
   post = "/:year/:month/:day/:slug"
 
 [params]
@@ -52,33 +55,27 @@ googleAnalytics = ""
 ## Main Menu English
 [[languages.en.menu.main]]
   name = "tips"
-  identifier = "tips"
   weight = 100
   url = "/tips/"
 [[languages.en.menu.main]]
   name = "in-depth"
   weight = 200
-  identifier = "in-depth"
   url = "/in-depth/"
 [[languages.en.menu.main]]
   name = "support"
-  identifier = "support"
   weight = 300
   url = "/support/"
 
 ## Main Menu Italian
 [[languages.it.menu.main]]
   name = "consigli"
-  identifier = "tips"
   weight = 100
-  url = "/tips/"
+  url = "/consigli/"
 [[languages.it.menu.main]]
   name = "approfondimenti"
   weight = 200
-  identifier = "in-depth"
-  url = "/in-depth/"
+  url = "/approfondimenti/"
 [[languages.it.menu.main]]
   name = "supportaci"
-  identifier = "support"
   weight = 300
-  url = "/support/"
+  url = "/supportaci/"
