--- a/config.toml
+++ b/config.toml
@@ -27,8 +27,8 @@ googleAnalytics = "UA-156024128-1"
   description = "Nepal all you need to know"
 
   # Custom assets can be linked with their paths relative to static/
-  custom_css = []
-  custom_js  = []
+  custom_css = [ "css/main.css" ]
+  custom_js  = [ "js/main.js" ]
   metadata_allowed_blog = ["in-depth", "approfondimenti"]
   theme_color = "#CB2E40"
 
