--- a/config.toml
+++ b/config.toml
@@ -23,13 +23,13 @@ googleAnalytics = "UA-156024128-1"
 
 [params]
   avatar = "profile.png"
-  author = "Alessandro Travi"
+  author = "Alessandro Travi, Denise Caggio"
   description = "Nepal all you need to know"
 
   # Custom assets can be linked with their paths relative to static/
   custom_css = [ "css/main.css" ]
   custom_js  = [ "js/main.js" ]
-  metadata_allowed_blog = ["in-depth", "approfondimenti"]
+  metadata_allowed_blog = [ "in-depth", "approfondimenti" ]
   theme_color = "#CB2E40"
 
 [params.author1]
