[feat]: twitter username

--- a/config.toml
+++ b/config.toml
@@ -45,7 +45,7 @@ googleAnalytics = "UA-156024128-1"
   Instagram = "https://www.instagram.com/nonblonde.d/"
 
 [params.social]
-  Twitter       = "username"
+  Twitter       = "allyouneedtok"
   Instagram     = "username"
   Facebook      = "username"
 
