[feat]: instagram profile

--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ googleAnalytics = "UA-156024128-1"
 
 [params.social]
   Twitter       = "allyouneedtok"
-  Instagram     = "username"
+  Instagram     = "allyouneedtoknow.tips"
   Facebook      = "username"
 
 ## Main Menu English
