[feat]: form contact

--- a/config.toml
+++ b/config.toml
@@ -45,9 +45,10 @@ googleAnalytics = "UA-156024128-1"
   Instagram = "https://www.instagram.com/nonblonde.d/"
 
 [params.social]
-  Twitter       = "allyouneedtok"
-  Instagram     = "allyouneedtoknow.tips"
-  Facebook      = "All-you-need-to-know-107668107442136"
+  Email     = "yes"
+  Twitter   = "allyouneedtok"
+  Instagram = "allyouneedtoknow.tips"
+  Facebook  = "All-you-need-to-know-107668107442136"
 
 ## Main Menu English
 [[languages.en.menu.main]]
