--- a/config.toml
+++ b/config.toml
@@ -31,6 +31,7 @@ googleAnalytics = "UA-156024128-1"
   custom_js  = [ "js/main.js" ]
   metadata_allowed_blog = [ "in-depth", "approfondimenti" ]
   theme_color = "#CB2E40"
+  google_adsense = "ca-pub-1348790363502354"
 
 [params.author1]
   name = "Alessandro"
