--- a/data/en/tips.yml
+++ b/data/en/tips.yml
@@ -1,22 +1,25 @@
 name: Tips
 source:
   - icon: fa fa-github
-    description: Ei viderer tacimates pro, quem assum ea nam. Veritus omnesque eam te. Et natum mucius tamquam vel, ea dolorem volumus deterruisset nec. Graeci mentitum sea an, eu prima elaboraret est.
+    description: No hostel accepts pre online payment nor credit card, neither those that say they do on booking.com.
 
   - icon: fa fa-github
-    description: An eripuit phaedrum qui, nec facer splendide ex, vel ea assum facilisi convenire. Te his neglegentur consectetuer.
+    description: Most people suggest to use Maps.me but we found Osmand much more useful, especially for trekking routes
 
   - icon: fa fa-github
-    description: An alii quot tantas eum, doming platonem persecuti mea et, vim perpetua cotidieque delicatissimi in.
+    description: Don't trust prices on booking.com. When in Nepal you will probably be charged more than expected. That's why it might be worth it not to book in advance and find a room directly on site.
   
   - icon: fa fa-globe
-    description: Vim an case vidit sententiae, est at euismod laboramus efficiantur. Ei sit brute lorem, ea eam timeam viderer aliquid, cu integre omittam moderatius quo.
+    description: There's no heating in Nepali houses, so make sure to have warm nightwear.
 
   - icon: fa fa-globe
-    description: Dicta causae meliore ex vel, in vix erant integre petentium. Vix ei nisl scripta recusabo, eam doming blandit facilisis.
+    description: Nepali cousine is perfect for vegeterians and vegan as it's mainly plant based (with rice).
 
   - icon: fa fa-cog
-    description: Inermis recusabo elaboraret mea et, dicat neglegentur vim te. Nec et sanctus scriptorem, usu ex sapientem gubergren. Tamquam admodum ei usu.
+    description: Dal Baht is essential in Nepali cousine. It's a dish of plain rice (Baht) with lentils soup (Dal) and vegetables. This meal is served lunch and dinner in each local family, and Nepali people usually eat it using hands.
 
   - icon: fa fa-cog
-    description: Essent putant indoctum sed in, reprimique persequeris neglegentur te quo. Nam rebum tractatos partiendo at, debet ubique oporteat ut his.
+    description: Do not use your left hand to eat, local people believe it's bad as left hand is used to cleanse your bottom after poo-poo.
+
+  - icon: fa fa-cog
+    description: 
