--- a/data/en/tips.yml
+++ b/data/en/tips.yml
@@ -1,24 +1,24 @@
 name: Tips
 source:
-  - icon: fa fa-github
+  - icon: fa fa-credit-card
     description: No hostel accepts pre online payment nor credit card, neither those that say they do on booking.com.
 
-  - icon: fa fa-github
+  - icon: fa fa-map-o
     description: Most people suggest to use Maps.me but we found Osmand much more useful, especially for trekking routes
 
-  - icon: fa fa-github
+  - icon: fa fa-money
     description: Don't trust prices on booking.com. When in Nepal you will probably be charged more than expected. That's why it might be worth it not to book in advance and find a room directly on site.
   
-  - icon: fa fa-globe
+  - icon: fa fa-thermometer-0
     description: There's no heating in Nepali houses, so make sure to have warm nightwear.
 
-  - icon: fa fa-globe
+  - icon: fa fa-cutlery
     description: Nepali cousine is perfect for vegeterians and vegan as it's mainly plant based (with rice).
 
-  - icon: fa fa-cog
+  - icon: fa fa-cutlery
     description: Dal Baht is essential in Nepali cousine. It's a dish of plain rice (Baht) with lentils soup (Dal) and vegetables. This meal is served lunch and dinner in each local family, and Nepali people usually eat it using hands.
 
-  - icon: fa fa-cog
+  - icon: fa fa-cutlery
     description: Do not use your left hand to eat, local people believe it's bad as left hand is used to cleanse your bottom after poo-poo.
 
   - icon: fa fa-cog
