--- a/data/en/tips.yml
+++ b/data/en/tips.yml
@@ -21,5 +21,9 @@ source:
   - icon: fa fa-cutlery
     description: Do not use your left hand to eat, local people believe it's bad as left hand is used to cleanse your bottom after poo-poo.
 
-  - icon: fa fa-cog
-    description: 
+  - icon: fa fa-money
+    description: Bring some cash with you if you're arriving by flight. You will be asked to pay for your VISA at the airport and credit cards do not usually work. Both Nepali Rupees and US Dollars are OK.
+
+  - icon: fa fa-money
+    description: Nepalese Rupees (NRP) is the official local currency.
+    <a href=https://www.xe.com/currencyconverter/> Real time converter </a>
