--- a/data/en/tips.yml
+++ b/data/en/tips.yml
@@ -58,7 +58,7 @@ source:
     description: Black tea is the most common type, but Masala Tea is the real speciality. It's basically black tea with spices, served with sugar and milk (but you can have it without milk too). Delicious!
   
   - icon: fa fa-tint
-    description: People in Nepal drink a lot of tea also because water is not safe. As an alternative to tea, especially on Hymalaya, people drink plain hot water.
+    description: People in Nepal drink a lot of tea also because water is not safe. As an alternative to tea, especially in the Hymalayan region, people drink plain hot water.
 
   - icon: fa fa-trash-o
     description: 
