[fix]: removed theme and new tips layout

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://nepal.allyouneedtoknow.tips/"
-theme = "hugo-sustain"
+# theme = "hugo-sustain"
 defaultContentLanguage = "en"
 languageCode = "en-US"
 title = "Nepal all you need to know"
