[feat]: translate tips

--- a/data/en/tips/3-transport.yml
+++ b/data/en/tips/3-transport.yml
@@ -19,4 +19,4 @@ source:
     description: As a tourist, you will probably being charged for double the price local people pay for a ride. It's something annoying, but prices are very low and 'bus bosses' are usually not the type of person you would like to argue with, so that's fine.
 
   - icon: fa fa-bus
-    description: If you're traveling with your backpack, remember to protect it with the rain cover before getting on the bus. If there won't be enough space for both you and your backback onboard, it will be either underneath the bus or outside on its ceiling. Both are not-so-clean options.
+    description: If you're traveling with your backpack, remember to protect it with the rain cover before getting on the bus. If there won't be enough space for both you and your backpack onboard, it will be either underneath the bus or outside on its ceiling. Both are not-so-clean options.
