--- a/data/en/tips/4-food.yml
+++ b/data/en/tips/4-food.yml
@@ -7,6 +7,9 @@ source:
     description: Dal Baht is essential in Nepali cousine. It's a dish of plain rice (Baht) with lentils soup (Dal) and vegetables. This meal is served lunch and dinner in each local family, and Nepali people usually eat it using hands.
 
   - icon: fa fa-cutlery
+    description: Momo are also very common in Nepal. They're basically dumplings filled in with vegetables and spices, sometimes also meat. You can choose to have them fried, steamed or grilled and they're usually served with some kind of sauce.
+
+  - icon: fa fa-cutlery
     description: Do not use your left hand to eat, local people believe it's bad as left hand is used to cleanse your bottom after poo-poo.
 
   - icon: fa fa-cutlery
