--- a/data/en/tips/1-general.yml
+++ b/data/en/tips/1-general.yml
@@ -29,3 +29,9 @@ source:
 
   - icon: fa fa-plug
     description: Nepal and India have their own plug type, so EU or US ones might not work. <a href="https://amzn.to/2vTSxfv" target="_blank">This</a> is what you might need. However, despite not having these proper electric plugs we did make it with IT and 'shuko' ones. So traveling with something like <a href="https://amzn.to/2SsnpLG" target="_blank">this</a> could be enough for you too.
+  
+  - icon: fa fa-medkit
+    description: No vaccinations are strictly required to visit Nepal, but it’s always worth checking which ones are recommended and ensuring you’re medical stuff are up-to-date. Perhaps it worth asking to your doctor.
+
+  - icon: fa fa-heart
+    description: Take out insurance. The airline you're flying with (if you're coming y air) will provide one for sure. But it won't probably be enought, especially if you're going on a trek. We bought <a href="https://www.globelink.co.uk/" target="_blank">this one</a>.
