--- a/data/en/tips/3-transport.yml
+++ b/data/en/tips/3-transport.yml
@@ -1,11 +1,13 @@
 name: Transport
 source:
-  
   - icon: fa fa-car
     description: Cars are right-hand driven in Nepal. English style, dude.
   
   - icon: fa fa-car
     description: Traffic in Nepal is crazy. If you're getting on a taxi or private cab, just don't-be-scared. For some reason, drivers are as much insane as they're good at avoiding to crash.
+
+  - icon: fa fa-motorcycle
+    description: Motorcycles are super common everywhere in the country. They allow people to deal with traffic (quite) easily.
 
   - icon: fa fa-train
     description: There's no railways in the country. Uh-oh. Train is not an option in Nepal.
@@ -30,3 +32,10 @@ source:
 
   - icon: fa fa-bus
     description: If you're traveling with your backpack, remember to protect it with a rain cover before getting on the bus. If there won't be enough space for both you and your backpack onboard, it will be put either underneath the bus or outside on the ceiling. Both are not-so-clean options.
+
+  - icon: fa fa-plane
+    description: You can take an internal flight to go from Kathmandu to Pokhara and back. We do suggest to take a bus though, first because price is lower (130USD vs 25USD), second because gas emissions are lower too.
+
+  - icon: fa fa-plane
+    description: Many people suggest the experience of overflying Hymalayas and see Mount Everest on a helicopter. Apart of being such a touristic-ish thing, is not something you should choose to do at all if you're traveling on a budget.
+  
